[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = 'digital-watermark'
version = '0.1.0'
description = 'A library for digital watermarking'
authors = [{ name = "Ben Batman", email = "benbatman2@gmail.com" }]

license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cffi==1.16.0",
    "cryptography==42.0.5",
    "mpmath==1.3.0",
    "numpy==2.2.4",
    "opencv-python==4.9.0.80",
    "pillow==10.3.0",
    "pycparser==2.22",
    "PyWavelets==1.6.0",
    "reedsolo==1.7.0",
    "sympy==1.12",
]

[project.urls]
"Homepage" = "https://github.com/benbatman/invisible-watermark"
